--- a/index.html
+++ b/index.html
@@ -7,20 +7,33 @@
     <meta name="keywords" content="udo,Universidad,sistemas,computacion">
 
     <title>Titulo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!--header>h1{Universidad de Occidente}+h3{Unidad Guasave}-->
-    <header>
+    <header id="encabezado">
+        <h1>Universidad de Occidente</h1>
         <h1>Universidad de Occidente</h1>
         <h3>Unidad Guasave</h3>
     </header>
     <!--main>figure>img[src="#" alt="text alt" width=960 height=320]+legend{texto de la imagen}-->
     <main>
-        <figure>
+        <!--<figure>
             <img src="#" alt="text alt" width="960" height="320">
             <legend>texto de la imagen</legend>
-        </figure>
+        </figure>-->
+        <form action="">
+            <label for="">Usuario</label>
+            <input type="text" name="txtUsuario" id="txtUsuario">
+            <label for="">Contraseña</label>
+            <input type="password" name="txtPassword" id="txtPassword">
+            <!--label>input:checkbox[name=remember id=remember]{Mantener la sesion iniciada}-->
+            <label>
+                <input type="checkbox" name="remember" id="remember">Mantener la sesion iniciada
+            </label>
+            <button type="submit">Iniciar sesion</button>
+            <a href="lost.html">Olvido su contraseña</a>
+        </form>
     </main>
     <!--footer>hr+p{Todos los derechos reservados &copy;2017}-->
     <footer>
