--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <meta name="keywords" content="udo,Universidad,sistemas,computacion">
 
     <title>Titulo</title>
+    <!--CSS Externo-->
     <link rel="stylesheet" href="styles.css">
+    <!--CSS Document
+    <styles>
+        h1 {
+            color: width;
+        }
+    </styles>-->
 </head>
 <body>
     <!--header>h1{Universidad de Occidente}+h3{Unidad Guasave}-->
@@ -17,28 +24,35 @@
         <h3>Unidad Guasave</h3>
     </header>
     <!--main>figure>img[src="#" alt="text alt" width=960 height=320]+legend{texto de la imagen}-->
-    <main>
+    <main id="contenido">
         <!--<figure>
             <img src="#" alt="text alt" width="960" height="320">
             <legend>texto de la imagen</legend>
         </figure>-->
-        <form action="">
-            <label for="">Usuario</label>
-            <input type="text" name="txtUsuario" id="txtUsuario">
-            <label for="">Contraseña</label>
-            <input type="password" name="txtPassword" id="txtPassword">
-            <!--label>input:checkbox[name=remember id=remember]{Mantener la sesion iniciada}-->
-            <label>
-                <input type="checkbox" name="remember" id="remember">Mantener la sesion iniciada
-            </label>
-            <button type="submit">Iniciar sesion</button>
-            <a href="lost.html">Olvido su contraseña</a>
-        </form>
+        <div id="login-form">
+            <form action="">
+                <div class="control">
+                    <label for="txtUsuario" class="negrita">Usuario</label><br>
+                    <input type="text" name="txtUsuario" id="txtUsuario" class="input">
+                </div>
+                <div class="control">
+                    <label for="">Contraseña</label><br>
+                    <input type="password" name="txtPassword" id="txtPassword" class="input">
+                </div>
+                <!--label>input:checkbox[name=remember id=remember]{Mantener la sesion iniciada}-->
+                <label class=block"">
+                    <input type="checkbox" name="remember" id="remember">Mantener la sesion iniciada
+                </label>
+                <button onclick="login()">Iniciar sesion</button>
+
+            </form>
+            <a href="lost.html" class="text-center block" >Olvido su contraseña</a>
+        </div>
     </main>
     <!--footer>hr+p{Todos los derechos reservados &copy;2017}-->
-    <footer>
+    <footer id="pie">
         <hr>
-        <p>Todos los derechos reservados &copy;2017</p>
+        <p>Todos los derechos reservados &copy;<spain class="negrita">2017</spain></p>
     </footer>
     <script src="js/app.js"></script>
 </body>
